Resolved - Issue #4: The Eclipse cannot run the project. https://github.com/charleech/arquillian-evaluation/issues/4